--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -6,86 +6,89 @@
               android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/cardview_shadow_end_color"
             app:cardElevation="0dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:id="@+id/listItem_comment">
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/darkestBlue"
-        />
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:weightSum="1"
-                android:gravity="center_vertical"
-                android:id="@+id/layout_eventListItem"
-                android:focusableInTouchMode="true"
-                android:clickable="true"
-                android:focusable="true">
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
 
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/darkestBlue"
+                    android:layout_marginBottom="6dp"
+            />
+
+            <ImageView android:layout_width="match_parent"
+                       android:layout_height="150dp"
+                       android:contentDescription="@string/contentDescription_image_in_comment"
+                       android:scaleType="centerCrop"
+                       android:visibility="gone"
+                       android:adjustViewBounds="true"
+                       android:transitionName="image_transition"
+                       android:id="@+id/imageView_imageInComment"/>
 
             <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
                     android:weightSum="1"
-                    android:layout_height="match_parent">
-                <TextView
-                        android:text="TextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView_commentDate"
-                        android:textColor="@color/lightBlueWithAlpha"
-                        android:padding="@dimen/card_view_padding"
-                        android:textSize="10sp"
+                    android:gravity="center_vertical"
+                    android:id="@+id/layout_eventListItem"
+                    android:focusableInTouchMode="true"
+                    android:clickable="true"
+                    android:focusable="true">
 
-                />
-                <TextView
-                        android:text="TextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/textView_commentAuthor"
-                        android:textColor="@color/darkBlue"
-                        android:padding="@dimen/card_view_padding"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:gravity="center"
-                />
-            </LinearLayout>
 
-            <LinearLayout android:layout_width="0dp"
-                          android:layout_weight="0.6"
-                          android:orientation="horizontal"
-                          android:layout_height="match_parent"
-                          android:weightSum="1"
-                          tools:ignore="UseCompoundDrawables">
-
-                <ImageView android:layout_width="0dp"
-                           android:layout_height="match_parent"
-                           android:layout_weight="0.3"
-                           android:contentDescription="@string/contentDescription_image_in_comment"
-                           android:id="@+id/imageView_imageInComment"
-                           tools:ignore="NestedWeights"/>
-                <TextView
+                <LinearLayout
+                        android:orientation="vertical"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:id="@+id/textView_commentContent"
-                        android:textColor="@color/darkBlue"
-                        android:layout_weight="0.7"
-                        android:padding="@dimen/card_view_padding"
-                        android:gravity="center"
-                        android:textAlignment="center"
-                />
+                        android:layout_weight="0.4"
+                        android:weightSum="1"
+                        android:layout_height="match_parent">
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView_commentDate"
+                            android:textColor="@color/lightBlueWithAlpha"
+                            android:padding="@dimen/card_view_padding"
+                            android:textSize="12sp"
+
+                    />
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView_commentAuthor"
+                            android:textColor="@color/darkBlue"
+                            android:padding="@dimen/card_view_padding"
+                            android:textAlignment="center"
+                            android:textStyle="bold"
+                            android:gravity="start"
+                    />
+                </LinearLayout>
+
+
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.6"
+                            android:id="@+id/textView_commentContent"
+                            android:textColor="@color/darkBlue"
+                            android:padding="@dimen/card_view_padding"
+                            android:gravity="center"
+                            android:textAlignment="center"
+                    />
+
 
             </LinearLayout>
 
         </LinearLayout>
+
 
 
     </android.support.v7.widget.CardView>
