--- a/app/src/main/res/layout/activity_gmaps.xml
+++ b/app/src/main/res/layout/activity_gmaps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
@@ -12,4 +12,26 @@
               android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:visibility="visible"
+            android:scaleType="centerCrop"
+            android:id="@+id/target_marker"
+            android:src="@drawable/ic_target"/>
+
+    <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:visibility="visible"
+            android:layout_below="@id/target_marker"
+            android:scaleType="centerCrop"
+            android:id="@+id/place_info"
+            android:src="@drawable/ic_info"/>
+
+
+</RelativeLayout>
