--- a/app/src/main/res/layout/activity_gmaps.xml
+++ b/app/src/main/res/layout/activity_gmaps.xml
@@ -33,5 +33,16 @@
             android:id="@+id/place_info"
             android:src="@drawable/ic_info"/>
 
+    <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:visibility="visible"
+            android:layout_below="@id/place_info"
+            android:scaleType="centerCrop"
+            android:id="@+id/person_marker"
+            android:src="@drawable/ic_person"/>
+
 
 </RelativeLayout>
