--- a/app/src/main/res/layout/popupwindowuser.xml
+++ b/app/src/main/res/layout/popupwindowuser.xml
@@ -4,17 +4,23 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".login.RegistrationActivity" android:background="@color/darkestBlue">
+            android:layout_height="wrap_content"
+            tools:context=".login.RegistrationActivity" android:background="@color/lightestBlue">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:background="@color/betweenDarkBlue">
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:background="@color/lightestBlue">
 
 
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="222dp"
+                android:layout_alignParentTop="true"
                 android:background="@color/darkestBlue"
                 android:src="@color/darkestBlue"
                 android:id="@+id/imageView_avatar_userpopup"
@@ -28,17 +34,47 @@
                 android:src="@drawable/icon"
                 android:id="@id/imageViewC_avatar_userpopup"
                 app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000" android:layout_marginTop="37dp" android:layout_alignParentTop="true"/>
+                android:paddingBottom="20dp"
+                app:civ_border_color="@color/betweenDarkBlue" android:layout_marginTop="37dp" android:layout_alignParentTop="true"/>
 
-        />
 
-        <ImageButton
-                android:layout_width="59dp"
-                android:layout_height="47dp"
-                android:id="@+id/mail_icon"
+        <TextView
+                android:text="ime prezime"
+                android:paddingStart="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/user_name"
+                android:textSize="20sp"
+                android:textColor="@color/betweenDarkBlue"
                 android:layout_below="@+id/imageViewC_avatar_userpopup"
-                android:src="@android:drawable/ic_dialog_email"
-                android:background="@null"/>
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"/>
+
+        <TextView
+                android:text="tip korisnika"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/user_type"
+                android:textSize="20sp"
+                android:textColor="@color/betweenDarkBlue"
+                android:layout_below="@+id/user_name"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"/>
+
+
+        <TextView
+                android:text="datum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/date_joined_user"
+                android:textSize="20sp"
+                android:textColor="@color/betweenDarkBlue"
+                android:layout_below="@+id/user_type"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"/>
 
         <TextView
                 android:text="email"
@@ -46,87 +82,21 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/user_email"
                 android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/imageViewC_avatar_userpopup"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@id/mail_icon"
+                android:textColor="@color/betweenDarkBlue"
+                android:layout_below="@+id/date_joined_user"
                 android:layout_centerInParent="true"
-                android:textAlignment="center" android:layout_marginTop="13dp" android:layout_marginRight="6dp"/>
+                android:textAlignment="center" />
 
-        <TextView
-                android:text="Name: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_name_text"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/user_email"
-                android:layout_alignParentLeft="true"/>
 
-        <TextView
-                android:text="ime prezime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_name"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/user_email"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@id/user_name_text"
-                android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"/>
-        <TextView
-                android:text="Type: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_type_text"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/user_name_text"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"/>
-        <TextView
-                android:text="tip korisnika"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_type"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/user_name"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@id/user_type_text"
-                android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"/>
-        <TextView
-                android:text="Date joined: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/date_joined_user_text"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/user_type_text"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"/>
-        <TextView
-                android:text="datum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/date_joined_user"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/user_type"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@id/user_type_text"
-                android:layout_centerInParent="true"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"/>
-
+        <com.airbnb.lottie.LottieAnimationView android:layout_width="60dp"
+                                               android:layout_height="60dp"
+                                               app:lottie_loop="true"
+                                               app:lottie_autoPlay="true"
+                                               android:layout_below="@+id/user_email"
+                                               android:layout_centerInParent="true"
+                                               app:lottie_fileName="1998-email.json"
+                                               android:paddingBottom="10dp"
+                                               android:id="@+id/user_email_animation"/>
 
 
     </RelativeLayout>
