--- a/app/src/main/res/layout/list_item_exhibitor.xml
+++ b/app/src/main/res/layout/list_item_exhibitor.xml
@@ -6,22 +6,15 @@
               android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_marginBottom="@dimen/margin_cardView"
             android:layout_marginTop="@dimen/margin_cardView"
             app:cardBackgroundColor="@android:color/white">
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
-
-        </LinearLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="1"
                 android:gravity="center_vertical"
@@ -29,7 +22,7 @@
 
             <ImageView
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/imageView_exhibitorLogo"
                     android:layout_weight="0.2"
                     android:layout_marginLeft="@dimen/margin_cardView"
@@ -47,11 +40,23 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView_exhibitorCompany"
-                    android:layout_weight="0.8"
+                    android:layout_weight="0.69"
                     android:textColor="@color/darkBlue"
                     android:padding="@dimen/card_view_padding"
                     android:textAlignment="center"
             />
+
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView_urlExhibitor"
+                    android:layout_weight="0.11"
+                    android:paddingRight="15dp"
+                    android:layout_marginLeft="@dimen/margin_cardView"
+                    android:layout_marginRight="@dimen/margin_cardView"
+                    android:layout_marginBottom="@dimen/margin_cardView"
+                    android:layout_marginTop="@dimen/margin_cardView"
+                    app:srcCompat="@drawable/worldwide"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
