--- a/app/src/main/res/layout/list_item_exhibitor.xml
+++ b/app/src/main/res/layout/list_item_exhibitor.xml
@@ -56,7 +56,7 @@
                     android:layout_marginRight="@dimen/margin_cardView"
                     android:layout_marginBottom="@dimen/margin_cardView"
                     android:layout_marginTop="@dimen/margin_cardView"
-                    app:srcCompat="@drawable/worldwide"/>
+                    app:srcCompat="@drawable/ic_url"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
