--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,29 +5,27 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_activityFeed"
-                android:icon="@android:drawable/ic_menu_agenda"
-                android:title="@string/text_activityFeed"/>
-        <item
                 android:id="@+id/nav_schedule"
                 android:icon="@android:drawable/ic_menu_month"
                 android:title="@string/text_schedule"/>
+        <item
+                android:id="@+id/nav_exhibitors"
+                android:icon="@drawable/ic_tag_presentation"
+                android:title="Exhibitors"/>
+        <item   android:id="@+id/nav_favourite_event"
+                android:icon="@drawable/ic_star_gray"
+                android:title="Favourite events"/>
+        <item android:id="@+id/nav_map"
+              android:icon="@android:drawable/ic_menu_mapmode"
+              android:title="Map"/>
         <item
                 android:id="@+id/nav_about"
                 android:icon="@android:drawable/ic_menu_info_details"
                 android:title="@string/text_about"/>
         <item
-                android:id="@+id/nav_exhibitors"
-                android:icon="@drawable/ic_tag_presentation"
-                android:title="Exhibitors"/>
-
-        <item   android:id="@+id/nav_favourite_event"
-                android:icon="@drawable/ic_star_gray"
-                android:title="Favourite events"/>
-
-        <item android:id="@+id/nav_map"
-              android:icon="@android:drawable/ic_menu_mapmode"
-              android:title="Map"/>
+                android:id="@+id/nav_activityFeed"
+                android:icon="@drawable/ic_locate_us"
+                android:title="Our location"/>
     </group>
 
     <item android:title="Communicate">
