--- a/app/src/main/res/layout/activity_image_enlarger.xml
+++ b/app/src/main/res/layout/activity_image_enlarger.xml
@@ -4,6 +4,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:id="@+id/zoomImage_container">
 
         <ImageView android:layout_width="wrap_content"
