--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
@@ -29,9 +30,11 @@
                        android:contentDescription="@string/contentDescription_image_in_comment"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
+                       android:background="@color/cardview_shadow_end_color"
                        android:adjustViewBounds="true"
                        android:transitionName="image_transition"
-                       android:id="@+id/imageView_imageInComment"/>
+                       android:id="@+id/imageView_imageInComment"
+                       tools:ignore="PrivateResource"/>
 
             <LinearLayout
                     android:layout_width="match_parent"
