- fixed minor issues :)

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -44,7 +44,8 @@
                   android:layout_height="wrap_content"
                   android:text="@string/confDates"
                   android:textAlignment="center"
-                  android:textSize="35sp"
+                  style="@android:style/TextAppearance.DeviceDefault.Large"
+
         />
 
     </LinearLayout>
