This code is so bad that I don't even want to write a commit message.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
+                android:id="@+id/nav_about"
+                android:icon="@android:drawable/ic_menu_info_details"
+                android:title="@string/text_about"
+                android:checked="true" />
+        <item
                 android:id="@+id/nav_schedule"
                 android:icon="@android:drawable/ic_menu_month"
                 android:title="@string/text_schedule"/>
@@ -18,10 +23,6 @@
         <item android:id="@+id/nav_map"
               android:icon="@android:drawable/ic_menu_mapmode"
               android:title="Map"/>
-        <item
-                android:id="@+id/nav_about"
-                android:icon="@android:drawable/ic_menu_info_details"
-                android:title="@string/text_about"/>
         <item
                 android:id="@+id/nav_activityFeed"
                 android:icon="@drawable/ic_locate_us"
