--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -27,7 +27,6 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
                 android:padding="5dp">
             <TextView
                     android:layout_width="wrap_content"
@@ -44,7 +43,7 @@
                     android:gravity="end"
                     android:id="@+id/linearLayout" android:layout_weight="1">
                 <ImageButton
-                        android:layout_width="wrap_content"
+                        android:layout_width="35dp"
                         android:layout_height="match_parent"
                         android:id="@+id/imageButton_previousDay"
                         android:background="@drawable/ic_arrow_left"
@@ -59,7 +58,7 @@
                             android:id="@+id/textView_currentDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/textSize_medium"
+                            android:textSize="@dimen/textSize_large"
                             android:textColor="@color/lightBlue"
                             android:layout_marginStart="8dp"
                             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
@@ -74,7 +73,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/textView_currentMonth"
-                            android:textSize="@dimen/textSize_small"
+                            android:textSize="@dimen/textSize_medium"
                             android:textColor="@color/lightBlue"
                             app:layout_constraintStart_toEndOf="@+id/textView_currentDate"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +82,7 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" android:id="@+id/textView_currentWeekday"
-                            android:textSize="@dimen/textSize_small"
+                            android:textSize="@dimen/textSize_medium"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView_currentMonth"
                             android:layout_margin="@dimen/no_margin" android:textColor="@color/lightBlue"
@@ -93,13 +92,19 @@
                             android:text="@string/textPlaceholder_currentWeekday"/>
                 </android.support.constraint.ConstraintLayout>
                 <ImageButton
-                        android:layout_width="wrap_content"
+                        android:layout_width="35dp"
                         android:layout_height="match_parent"
                         android:id="@+id/imageButton_nextDay"
                         android:background="@drawable/ic_arrow_right"
                         android:contentDescription="@string/contentDesc_arrowRight"/>
             </LinearLayout>
         </LinearLayout>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lightBlue" />
+
         <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
             <android.support.v4.widget.SwipeRefreshLayout
                     android:id="@+id/swipeRefresh_schedule"
