--- a/app/src/main/res/layout/list_item_exhibitor.xml
+++ b/app/src/main/res/layout/list_item_exhibitor.xml
@@ -5,11 +5,13 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
+            android:id="@+id/list_item_exhibitor_layout"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginBottom="@dimen/margin_cardView"
             android:layout_marginTop="@dimen/margin_cardView"
-            app:cardBackgroundColor="@android:color/white">
+            app:cardBackgroundColor="@android:color/white"
+            android:background="?attr/selectableItemBackground">
 
 
         <LinearLayout
