--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -10,8 +10,6 @@
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/cardview_shadow_end_color"
             app:cardElevation="0dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
             android:id="@+id/listItem_comment">
 
         <LinearLayout android:layout_width="match_parent"
@@ -34,7 +32,8 @@
                        android:adjustViewBounds="true"
                        android:transitionName="image_transition"
                        android:id="@+id/imageView_imageInComment"
-                       tools:ignore="PrivateResource"/>
+                       tools:ignore="PrivateResource"
+            android:padding="10dp"/>
 
             <LinearLayout
                     android:layout_width="match_parent"
