--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -13,9 +13,9 @@
             android:layout_marginStart="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.01"
             app:layout_constraintVertical_bias="0.01"
@@ -67,20 +67,32 @@
             android:orientation="vertical">
 
         <TextView
-                android:text="@string/confDescription"
+                android:id="@+id/textView_eventDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:id="@+id/textView_eventDescription"
-                android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 android:justificationMode="inter_word"
+                android:text="@string/confDescription"
 
         />
 
+
     </LinearLayout>
+    <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+            app:srcCompat="@drawable/ieee_ri_logo"/>
 
 
 </android.support.constraint.ConstraintLayout>
